[package]
name = "rusty-cl"
version = "0.1.2"
edition = "2021"
description = "Rusty binding for OpenCL"
authors = ["Felix Bytow <drako@drako.guru>"]
repository = "https://github.com/Drako/rusty-cl.git"
documentation = "https://docs.rs/crate/rusty-cl"
readme = "README.md"
license = "MIT"
links = "OpenCL"
build = "build.rs"

[workspace]
