[package]
name = "rusty-cl"
version = "0.1.7"
edition = "2021"
description = "Rusty binding for OpenCL"
authors = ["Felix Bytow <drako@drako.guru>"]
repository = "https://github.com/Drako/rusty-cl.git"
documentation = "https://docs.rs/crate/rusty-cl"
categories = ["api-bindings"]
keywords = ["opencl", "gpu", "gpgpu"]
readme = "README.md"
license = "MIT"
links = "OpenCL"
build = "build.rs"

[lib]
test = true
doctest = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[workspace]
